Update travis config to run tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: node_js
 node_js:
   - node
+
+services:
+  - docker
+
+script:
+  - docker-compose -f docker-compose.test.yml -p ci build
+  - docker-compose -f docker-compose.test.yml -p ci up -d
+  - docker logs -f ci_sut_1
+  - docker wait ci_sut_1
