--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,4 @@ services:
   - docker
 
 script:
-  - docker-compose -f docker-compose.test.yml -p ci build
-  - docker-compose -f docker-compose.test.yml -p ci up -d
-  - docker logs -f ci_sut_1
-  - docker wait ci_sut_1
+  - bash scripts/run_tests.sh
